# api/swagger.yaml
@@ -46,6 +46,32 @@ paths:
         "405":
           description: "Invalid input"
       x-swagger-router-controller: "shotgun.controller"
+  /shotgun/{nom_shotgun}:
+    get:
+      tags:
+      - "shotgun"
+      summary: "Find shotgun by nom_shotgun"
+      description: "Returns a single shotgun"
+      operationId: "findshotgun"
+      produces:
+      - "application/json"
+      - "application/xml"
+      parameters:
+      - name: "nom_shotgun"
+        in: "path"
+        description: "nom of shotgun"
+        required: true
+        type: "string"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Shotgun"
+        "400":
+          description: "Invalid nom supplied"
+        "404":
+          description: "Shotgun not found"
+      x-swagger-router-controller: "shotgun.controller"
   /shotgun/{id}:
     get:
       tags:
@@ -461,6 +487,18 @@ definitions:
         type: "string"
       bio:
         type: "string"
+      email:
+        type: 'string'
+      age:
+        type: 'integer'
+        format: 'int64'
+      telephone:
+        type: 'integer'
+        format: 'int64'
+      genre:
+        type: 'string'
+      custom:
+        type: 'string'
     xml:
       name: "User"
     example:
@@ -469,6 +507,11 @@ definitions:
       fullname: "fullname"
       photo: "photo"
       bio: "bio"    
+      email: email,
+      age: 18,
+      telephone: 0695954346,
+      genre: M,
+      custom: custom
   Shotgun:
     type: "object"
     required:
@@ -487,6 +530,18 @@ definitions:
         format: "int64"
       photo_shotgun:
         type: "string"   
+      email:
+        type: 'string'
+      age:
+        type: 'integer'
+        format: 'int64'
+      telephone:
+        type: 'integer'
+        format: 'int64'
+      genre:
+        type: 'string'
+      custom:
+        type: 'string'
     xml:
       name: "Shotgun"
     example:
@@ -496,8 +551,11 @@ definitions:
       nb_place: 2
       photo_shotgun: "photo"
       duree_shotgun: 10
-      
-      
+      email: email,
+      age: 18,
+      telephone: 0695954346,
+      genre: M,
+      custom: custom
   Event:
     type: "object"
     properties:
@@ -508,19 +566,33 @@ definitions:
         type: "string"
       admin:
         type: "boolean"
-      info:
-        type: "string"
       temps_shot:
         type: "integer"
         format: "int64"
+      email:
+        type: 'string'
+      age:
+        type: 'integer'
+        format: 'int64'
+      telephone:
+        type: 'integer'
+        format: 'int64'
+      genre:
+        type: 'string'
+      custom:
+        type: 'string'
     xml:
       name: "Event"
     example:
       id: 100000
       username: "username"
       admin: "true"
-      info: "info"
       temps_shot: 6
+      email: email,
+      age: 18,
+      telephone: 0695954346,
+      genre: M,
+      custom: custom
       
   Game:
     type: "object"
