# models/shotgun.model.js
@@ -6,8 +6,30 @@ const Shotgun = function(shotgun) {
   this.nom_shotgun= shotgun.nom_shotgun;
   this.date_shotgun = shotgun.date_shotgun;
   this.nb_place = shotgun.nb_place;
-  this.photo_shotgun = shotgun.photo_shotgun
+  this.photo_shotgun = shotgun.photo_shotgun;
+  this.email = shotgun.email;
+  this.age = shotgun.age;
+  this.telephone = shotgun.telephone;
+  this.genre = shotgun.genre;
+  this.custom = shotgun.custom
 };
+
+
+function entierAleatoire(min, max)
+  {
+  return Math.floor(Math.random() * (max - min + 1)) + min;
+  }
+  var liste = [0,1,2,6,8,7,3,5,9,4]
+  //Utilisation
+  //La variable contient un nombre aléatoire compris entre 1 et 10
+  var entier = entierAleatoire(1, 10);
+  for (let i = 0; i < liste.length; i++) {
+    if (entier === liste[i]){
+      entier = entierAleatoire(1, 10);
+      i=0;
+  }    
+} 
+
 
 Shotgun.create = (newShotgun, result) => {
   sql.query("INSERT INTO shotgun SET ?", newShotgun, (err, res) => {
@@ -41,11 +63,30 @@ Shotgun.findById = (id, result) => {
     });
 };
 
+Shotgun.findByNom = (nom_shotgun, result) => {
+  sql.query("SELECT * FROM shotgun WHERE nom_shotgun = ?", nom_shotgun.substring(1), (err, res) => {
+      if (err) {
+      console.log("error: ", err);
+      result(err, null);
+      return;
+    }
+
+    if (res.length) {
+      console.log("found shotgun: ", res[0]);
+      result(null, res[0]);
+      return;
+    }
+
+    // not found Shotgun with the nom
+    result({ kind: "not_found" }, null);
+  });
+};
+
 
 Shotgun.updateById = (id, shotgun, result) => {
   sql.query(
-    "UPDATE shotgun SET nom_shotgun = ?, date_shotgun = ?, nb_place = ?, photo_shotgun = ? WHERE id = ?",
-    [shotgun.nom_shotgun, shotgun.date_shotgun, shotgun.nb_place, shotgun.photo_shotgun, id.substring(1) ],
+    "UPDATE shotgun SET nom_shotgun = ?, date_shotgun = ?, nb_place = ?, photo_shotgun = ?, email=?, age=?, telephone=?, genre=?, custom=? WHERE id = ?",
+    [shotgun.nom_shotgun, shotgun.date_shotgun, shotgun.nb_place, shotgun.photo_shotgun, shotgun.email, shotgun.age, shotgun.telephone, shotgun.genre, shotgun.custom, id.substring(1) ],
     (err, res) => {
       if (err) {
         console.log("error: ", err);
@@ -112,8 +153,8 @@ Shotgun.findByUsername = (username, result) => {
     }
 
     if (res.length) {
-      console.log("found shotgun: ", res[0]);
-      result(null, res[0]);
+      console.log("found shotgun: ", res);
+      result(null, res);
       return;
     }
 
