# models/user.model.js
@@ -7,6 +7,11 @@ const User = function(user) {
   this.fullname= user.fullname;
   this.photo = user.photo;
   this.bio = user.bio;
+  this.email = user.email;
+  this.age = user.age;
+  this.telephone = user.telephone;
+  this.genre = user.genre;
+  this.custom = user.custom
 };
 
 User.create = (newUser, result) => {
@@ -31,8 +36,8 @@ User.findByName = (username, result) => {
       }
   
       if (res.length) {
-        console.log("found user: ", res[0]);
-        result(null, res[0]);
+        console.log("found user: ", res);
+        result(null, res);
         return;
       }
   
@@ -63,8 +68,8 @@ User.getAll = (username, result) => {
 
 User.updateByName = (username, user, result) => {
   sql.query(
-    "UPDATE user SET username = ?, password = ?, fullname = ?, photo = ?, bio = ? WHERE username = ?",
-    [user.username, user.password, user.password, user.photo, user.bio, username.substring(1) ],
+    "UPDATE user SET username = ?, password = ?, fullname = ?, photo = ?, bio = ?, email=?, age=?, telephone=?, genre=?, custom=? WHERE username = ?",
+    [user.username, user.password, user.password, user.photo, user.bio, user.email, user.age, user.telephone, user.genre, user.custom, username.substring(1) ],
     (err, res) => {
       if (err) {
         console.log("error: ", err);
